--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <iframe title="T20_WorldCup_Analysis" width="900" height="562.5" src="https://app.powerbi.com/view?r=eyJrIjoiOTc3N2ZiYzItYjAyNS00MjNlLWJkNmItMmM1ODc2OTVmZDBkIiwidCI6IjQzMmNjNWJlLTMxMTEtNGNjYy1iNzk2LTUxYzhjMGQ4YjViYSJ9&pageName=ReportSection6b44667583e1e86c2b08" frameborder="0" allowFullScreen="true"></iframe>
     </div>
     <footer class="u-align-center u-clearfix u-footer u-grey-80 footer" id="sec-a78b"><div class="u-align-left u-clearfix u-sheet u-sheet-1">
-        <a href="https://github.com/shivanshka/Cricket_Analytics.git" class="github" data-image-width="100" data-image-height="100" title="Source code" target="_blank">
+        <a href="https://github.com/Aniket-Zope/Cricket_Analytics" class="github" data-image-width="100" data-image-height="100" title="Source code" target="_blank">
           <img src="images/git.png" class="github_image">
         </a>
         <a href="https://www.linkedin.com/in/aniket-zope-24b116152/" class="linkedin" data-image-width="100" data-image-height="100" title="Developen Linkedin Id" target="_blank">
