--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         <a href="https://www.linkedin.com/in/aniket-zope-24b116152/" class="linkedin" data-image-width="100" data-image-height="100" title="Developen Linkedin Id" target="_blank">
             <img src="images/linkedin.png" class="linkedin_image">
           </a>
-        <p class="footer-text">Created by Shivansh Kaushal</p>
+        <p class="footer-text">Created by Aniket Zope</p>
       </div></footer>
 </body>
 </html>
