--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     </div>
     <footer class="u-align-center u-clearfix u-footer u-grey-80 footer" id="sec-a78b"><div class="u-align-left u-clearfix u-sheet u-sheet-1">
         <a href="https://github.com/Aniket-Zope/Cricket_Analytics" class="github" data-image-width="100" data-image-height="100" title="Source code" target="_blank">
-          <img src="images/git.png" class="github_image">
+          <img src="git.png" class="github_image">
         </a>
         <a href="https://www.linkedin.com/in/aniket-zope-24b116152/" class="linkedin" data-image-width="100" data-image-height="100" title="Developen Linkedin Id" target="_blank">
             <img src="images/linkedin.png" class="linkedin_image">
